2015-07-01 Loic Valery <lvalery@cern.ch>
        * Chang TthPlot to avoid nan problems when no data
        * Some cleaning in TthPlot
        * Fixed bug in post-fit NormFactor error propagation

2015-06-24 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Minor fixes
        * Svn-Tagging: 00-00-02
        
2015-06-23 Loic Valery <lvalery@cern.ch>
        * Changing HistoChecks and preceeds it by corrections for null bins and weird systematics
        * Fix text color problems in HistoChecks

2015-06-18 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Fix various warnings and printout reduced in case DEBUGLEVEL is set to 0
        * Svn-Tagging: 00-00-01
        
2015-06-15 Loic Valery <lvalery@cern.ch>
  	* Root/TtHFit.C: Adding the check of the histograms
	* Root/SampleHist.C: Adding post-smoothing check of the histograms

2015-06-12 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C: table code fixed
        * Root/TtHFit.C, Root/FitResults.C: systematic pulls plot code moved to FitResults.C
        
2015-05-27 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C, TtHFitter/TtHFit.h, util/myFit.C: CorrelationMatrix drawing command moved to myFit.C
        * Root/TtHFit.C: signal regions plot fixed (this time really)

2015-05-26 Loic Valery <lvalery@cern.ch>
        * CorrelationMatrix.C: implement duumping of correlation matrix in Plots/ folder

2015-05-25 Loic Valery <lvalery@cern.ch>
        * myFit.C: fixing the order of commands (smoothing done before writing the histos in the file)
        * Region.C: fix on the central values (consistent with Roostats) -- still work to do on the systematics
        * Common.C/.h: moving the variable for dumping systematic control plots in Common

2015-05-22 Michele Pinamonti <michele.pinamonti@gmail.com>
        * general: cahnged organization of the output: now all the files created by a fit are inside a single directory, with a sub-directory structure